--- a/admin/css/stylesheet.css
+++ b/admin/css/stylesheet.css
@@ -71,5 +71,17 @@ input[type=number] {
 }
 
 .nav-item {
-    font-size: 12px;
+    font-size: 20px;
+}
+
+@media screen  and (max-width: 991px){
+    #dashboard-menu {
+        width: 100%;
+        height: auto;
+    }
+    
+}
+
+#main-content {
+   margin-top: 60px;
 }
